--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="header-navigatin">
             <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <ul class="header-menu-list">
-                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link current" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
