--- a/index.html
+++ b/index.html
@@ -47,19 +47,39 @@
                     <h2 hidden class="visually-hidden">Name section</h2>
                     <ul class="features-list">
                         <li class="features-item">
+                            <div class="icon-container">
+                              <svg class="features-ikon" width="64" height="64">
+                                <use href="./images/icon.svg#icon-antenna-1"></use>
+                              </svg>
+                            </div>
                             <h3 class="features-subtitle">Strategy</h3>
                             <p class="features-item-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="features-item">
+                            <div class="icon-container">
+                                <svg class="features-ikon" width="64" height="64">
+                                    <use href="./images/icon.svg#icon-clock-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="features-subtitle">Punctuality</h3>
                             <p class="features-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="features-item">
+                            <div class="icon-container">
+                                <svg class="features-ikon" width="64" height="64">
+                                    <use href="./images/icon.svg#icon-diagram-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="features-subtitle">Diligence</h3>
                             <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="features-item">
+                            <div class="icon-container">
+                                <svg class="features-ikon" width="64" height="64">
+                                    <use href="./images/icon.svg#icon-astronaut-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="features-subtitle">Technologies</h3>
                             <p class="features-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
@@ -76,6 +96,36 @@
                             <div class="team-name">
                                 <h3 class="team-subtitle">Mark Guerrero</h3>
                                 <p class="team-text">Product Designer</p>
+                                <ul class="icon-list">
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                     </li>
                     <li class="team-item">
@@ -84,6 +134,36 @@
                             <div class="team-name">
                                 <h3 class="team-subtitle">Tom Ford</h3>
                                 <p class="team-text">Frontend Developer</p>
+                                <ul class="icon-list">
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                     </li>
                     <li class="team-item">
@@ -92,6 +172,36 @@
                             <div class="team-name">
                                 <h3 class="team-subtitle">Camila Garcia</h3>
                                 <p class="team-text">Marketing</p>
+                                <ul class="icon-list">
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                     </li>
                     <li class="team-item">
@@ -99,7 +209,36 @@
                         />
                             <div class="team-name">
                                 <h3 class="team-subtitle">Daniel Wilson</h3>
-                                <p class="team-text">UI Designer</p>
+                                <p class="team-text">UI Designer</p><ul class="icon-list">
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-item">
+                                        <a class="icon-link" href="">
+                                            <svg class="soc-icon" width="16" height="16">
+                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                     </li>
                 </ul>
