--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
                         />
                             <div class="team-name">
                                 <h3 class="team-subtitle">Daniel Wilson</h3>
-                                <p class="team-text">UI Designer</p><ul class="icon-list">
+                                <p class="team-text">UI Designer</p>
+                                <ul class="icon-list">
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
