--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li class="features-item">
                             <div class="icon-container">
                               <svg class="features-ikon" width="64" height="64">
-                                <use href="./images/icon.svg#icon-antenna-1"></use>
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
                               </svg>
                             </div>
                             <h3 class="features-subtitle">Strategy</h3>
@@ -59,7 +59,7 @@
                         <li class="features-item">
                             <div class="icon-container">
                                 <svg class="features-ikon" width="64" height="64">
-                                    <use href="./images/icon.svg#icon-clock-1"></use>
+                                    <use href="./images/icons.svg#icon-clock-1"></use>
                                 </svg>
                             </div>
                             <h3 class="features-subtitle">Punctuality</h3>
@@ -68,7 +68,7 @@
                         <li class="features-item">
                             <div class="icon-container">
                                 <svg class="features-ikon" width="64" height="64">
-                                    <use href="./images/icon.svg#icon-diagram-1"></use>
+                                    <use href="./images/icons.svg#icon-diagram-1-192358"></use>
                                 </svg>
                             </div>
                             <h3 class="features-subtitle">Diligence</h3>
@@ -77,7 +77,7 @@
                         <li class="features-item">
                             <div class="icon-container">
                                 <svg class="features-ikon" width="64" height="64">
-                                    <use href="./images/icon.svg#icon-astronaut-1"></use>
+                                    <use href="./images/icons.svg#icon-astronaut-1"></use>
                                 </svg>
                             </div>
                             <h3 class="features-subtitle">Technologies</h3>
@@ -100,28 +100,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -138,28 +138,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -176,28 +176,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -214,28 +214,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                                                <use href="./images"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -295,6 +295,31 @@
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
+        </div>
+        <div class="footer-soc">
+            <p class="footer-soc-text">Social media</p>
+            <ul class="footer-soc-list">
+                <li class="footer-soc-item">
+                    <svg class="footer-soc-icon" width="40" heidth="40">
+                        <use href="./images/soc-icon.svg#icon-instagram-2"></use>
+                    </svg>
+                </li>
+                <li class="footer-soc-item">
+                    <svg class="footer-soc-icon" width="40" heidth="40">
+                        <use href="./images/soc-icon.svg#icon-twitter-1"></use>
+                    </svg>
+                </li>
+                <li class="footer-soc-item">
+                    <svg class="footer-soc-icon" width="40" heidth="40">
+                        <use href="./images/soc-icon.svg#icon-facebook-1"></use>
+                    </svg>
+                </li class="footer-soc-item">
+                <li>
+                    <svg class="footer-soc-icon" width="40" heidth="40">
+                        <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
+                    </svg>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
