--- a/index.html
+++ b/index.html
@@ -138,28 +138,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -176,28 +176,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -214,28 +214,28 @@
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-instagram-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-twitter-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-facebook-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="icon-item">
                                         <a class="icon-link" href="">
                                             <svg class="soc-icon" width="16" height="16">
-                                                <use href="./images"></use>
+                                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -291,35 +291,45 @@
     </main>
     <footer class="footer">
         <div class="container container-footer">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </div>
-        <div class="footer-soc">
-            <p class="footer-soc-text">Social media</p>
-            <ul class="footer-soc-list">
-                <li class="footer-soc-item">
-                    <svg class="footer-soc-icon" width="40" heidth="40">
-                        <use href="./images/soc-icon.svg#icon-instagram-2"></use>
-                    </svg>
-                </li>
-                <li class="footer-soc-item">
-                    <svg class="footer-soc-icon" width="40" heidth="40">
-                        <use href="./images/soc-icon.svg#icon-twitter-1"></use>
-                    </svg>
-                </li>
-                <li class="footer-soc-item">
-                    <svg class="footer-soc-icon" width="40" heidth="40">
-                        <use href="./images/soc-icon.svg#icon-facebook-1"></use>
-                    </svg>
-                </li class="footer-soc-item">
-                <li>
-                    <svg class="footer-soc-icon" width="40" heidth="40">
-                        <use href="./images/soc-icon.svg#icon-linkedin-1"></use>
-                    </svg>
-                </li>
-            </ul>
+            <div class="footer-box">
+                <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-soc">
+                <p class="footer-soc-text">Social media</p>
+                <ul class="footer-soc-list">
+                    <li class="footer-soc-item">
+                        <a href="" target="_blank" class="footer-link">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" target="_blank" class="footer-link">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" target="_blank" class="footer-link">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                            <use href=".//images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li  class="footer-soc-item">
+                        <a href="" target="_blank" class="footer-link">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
