--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <li class="footer-soc-item">
                         <a href="" target="_blank" class="footer-link">
                         <svg class="footer-soc-icon" width="24" height="24">
-                            <use href=".//images/icons.svg#icon-facebook-1"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                         </a>
                     </li>
