--- a/index.html
+++ b/index.html
@@ -249,37 +249,67 @@
             <div class="container container-portfolio">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                     <ul class="portfolio-list">
-                        <li class="portfolio-item"> <img src="./images/banking.jpg" alt="Banking App" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/banking.jpg" alt="Banking App" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-subtitle">Banking App</h3>
                                     <p class="portfolio-text">App</p>
                             </div>
                         </li>
-                        <li class="portfolio-item"> <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                             <h3 class="portfolio-subtitle">Cashless Payment</h3>
                                     <p class="portfolio-text">Marketing</p>
                             </div>
                         </li>
-                        <li class="portfolio-item"> <img src="./images/media.jpg" alt="Meditation App" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/media.jpg" alt="Meditation App" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-subtitle">Meditation App</h3>
                                     <p class="portfolio-text">App</p>
                             </div>
                         </li>
-                        <li class="portfolio-item"> <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                                     <p class="portfolio-text">Marketing</p>
                             </div>  
                         </li>
-                        <li class="portfolio-item"> <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                                     <p class="portfolio-text">Design</p>
                             </div>
                         </li>
-                        <li class="portfolio-item"> <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
+                        <li class="portfolio-item"> 
+                            <div class="portfolio-image-container">
+                                <img src="./images/online.jpg" alt="Online Courses" width="360" height="300" class="portfolio-item-img">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-subtitle">Online Courses</h3>
                                     <p class="portfolio-text">Marketing</p>
